2009-09-03  Jason Merrill  <jason@redhat.com>

	* name-lookup.c (is_class_level): Remove.
	(push_binding_level, leave_scope, resume_scope): Adjust.
	(pushlevel_class): Adjust.
	(poplevel_class): Make sure we're on class_binding_level.

2009-09-02  Jason Merrill  <jason@redhat.com>

	* decl.c (grokmethod): Rename from start_method.
	(finish_method): Remove.
	* cp-tree.h: Adjust.
	* parser.c (cp_parser_save_member_function_body): Adjust.

2009-09-03  Doug Kwan  <dougkwan@google.com>

	* tree.c (cp_fix_function_decl_p): New.
	(cp_free_lang_data): New.

2009-09-03  Diego Novillo  <dnovillo@google.com>

	* Make-lang.in (decl2.o): Add dependency on $(POINTER_SET_H).
	* decl2.c: Include pointer-set.h.
	(collect_candidates_for_java_method_aliases): New.
	(cp_write_global_declarations): Call it.
	Add local variable CANDIDATES.  If set, call
	build_java_method_aliases.
	(build_java_method_aliases): Add argument CANDIDATES.
	Use it to determine if FNDECL should get a hidden alias.
	* cp-objcp-common.h (LANG_HOOKS_FREE_LANG_DATA): Define.
	* cp-tree.h (cp_free_lang_data): Declare.

2009-09-03  Richard Guenther  <rguenther@suse.de>

	* method.c (use_thunk): Use cgraph_finalize_function to hand
	off thunks to the cgraph.
	* semantics.c (emit_associated_thunks): Do not emit thunks
	for really extern functions.

2009-09-03  Diego Novillo  <dnovillo@google.com>

	* cp-lang.c (lang_hooks): Remove const qualifier.

2009-09-02  Jason Merrill  <jason@redhat.com>

	* semantics.c (describable_type): Don't pretend to be in a template.

	* ptree.c (cxx_print_type) [DECLTYPE_TYPE]: Print the expression.

2009-09-01  Alexandre Oliva  <aoliva@redhat.com>

	* cp-tree.h (TFF_NO_OMIT_DEFAULT_TEMPLATE_ARGUMENTS): New.
	* cp-lang.c (cxx_dwarf_name): Pass it.
	* error.c (count_non_default_template_args): Take flags as
	argument.  Adjust all callers.  Skip counting of default
	arguments if the new flag is given.

2009-09-01  Dodji Seketeli  <dodji@redhat.com>

	PR bootstrap/41205